# logs

./: .gitignore  .pre-commit-config.yaml  README.md  index.html  pyproject.toml
.github/workflows/: test.yaml
docs/: README.md
examples/: bind.py  filters.py  formatting.py  testing.py
logs/: __init__.py  bind.py  handlers.py  levels.py  testing.py
tests/: conftest.py  test_bind.py  test_configuration.py  test_examples.py  test_formatters.py  test_get_logger.py  test_handlers.py  test_log_record.py  test_loggers.py  utils.py
