[tool.poetry]
name = "logs"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-sugar = "^0.9.4"
pytest-asyncio = "^0.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
